# the-senior-agent-blueprint

./: .gitignore  LICENSE  README.md
Chapter_03_MCP/: .env.example  .gitignore  README.md  claude_desktop_config.example.json  main.py  pyproject.toml  requirements.txt  seed_data.py
Chapter_04_DSPy/: .env.example  README.md  __init__.py  main.py  metrics.py  models.py  optimized_prompt.txt  portable_prompt.txt  requirements.txt  signatures.py
Chapter_05_Memory/: .env.example  README.md  __init__.py  config.py  ingest.py  main.py  models.py  requirements.txt  store.py
Chapter_06_Semantic_Router/: README.md  main.py  requirements.txt
